--- a/vercel.json
+++ b/vercel.json
@@ -1,26 +1,22 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "client/package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "client/build"
-      }
+  "projects": {
+    "backend": {
+      "root": "api",
+      "buildCommand": "npm install && npm run build",
+      "outputDirectory": "build",
+      "devCommand": "npm run dev"
     },
-    {
-      "src": "api/server.js",
-      "use": "@vercel/node"
+    "frontend": {
+      "root": "client",
+      "buildCommand": "npm install && npm run build",
+      "outputDirectory": "build",
+      "devCommand": "npm run dev"
     }
-  ],
-  "routes": [
+  },
+  "rewrites": [
     {
-      "src": "/api/(.*)",
-      "dest": "/api/server.js"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/client/build/$1"
+      "source": "/api/(.*)",
+      "destination": "/api/$1"
     }
   ]
 }
